--- a/projects/vidly-app/client/src/style/SignUpForm.css
+++ b/projects/vidly-app/client/src/style/SignUpForm.css
@@ -1,62 +1,66 @@
 .signup-form-container {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    min-width: 100vw;
-    min-height: 100vh;
-    /* background:rgba(0, 162, 174, 0.17); */
-    background-color: rgba(254, 167, 101, 0.12);
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  min-width: 100vw;
+  min-height: 100vh;
+  /* background:rgba(0, 162, 174, 0.17); */
+  background-color: rgba(254, 167, 101, 0.12);
 }
 .signup-header {
-    padding-bottom: 5px;
+  padding-bottom: 5px;
 }
 .signup-form {
-    width: 80vw;
-    min-height: 80vh;
-    padding-bottom: 70px;
+  width: 80vw;
+  min-height: 80vh;
+  padding-bottom: 70px;
 }
 .select-location {
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 .signup-btn {
-    border-radius: 24px;
+  border-radius: 24px;
 }
 
-@media only screen and (min-width: 500px) and (max-width: 749px ) {
-    .signup-form {
-        width: 60%;
-        min-height: 80%;
-    }
-    .signup-header {
-        font-size: 42px;
-        padding-bottom: 20px;
-    }
-    .signup-form-container {
-        padding: 60px;
-    }
-    .select-location, .ant-select-selection {
-        width: 250px;
-    }
+@media only screen and (min-width: 500px) and (max-width: 749px) {
+  .signup-form {
+    width: 60%;
+    min-height: 80%;
+  }
+  .signup-header {
+    font-size: 42px;
+    padding-bottom: 20px;
+  }
+  .signup-form-container {
+    padding: 60px;
+  }
+  .ant-select-selection {
+    /* width: 250px; */
+    display: flex;
+    flex-direction: column;
+    margin-left: 300px;
+  }
 }
 
 @media only screen and (min-width: 750px) {
-    .signup-form {
-        width: 60%;
-        min-height: 80%;
-    }
-    .signup-header {
-        font-size: 42px;
-        padding-bottom: 20px;
-    }
-    .signup-form-container {
-        padding: 60px;
-    }
-    .select-location, .ant-select-selection {
-        width: 250px;
-    }
+  .signup-form {
+    width: 60%;
+    min-height: 80%;
+  }
+  .signup-header {
+    font-size: 42px;
+    padding-bottom: 20px;
+  }
+  .signup-form-container {
+    padding: 60px;
+  }
+  .select-location,
+  .ant-select-selection {
+    width: 250px;
+  }
 }
